feat: 環境構築と各種コマンドインストール

--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -12,6 +12,7 @@ RUN apt-get update && apt-get install -y \
     htop \
     lsof \
     sysstat \
-    dstat
+    dstat \
+    nginx
 
 CMD ["/bin/bash"]
